<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivateLobbyFrag">

    <LinearLayout
        android:id="@+id/privateLobbyFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateLobbyPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player1"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/privateLobbyPlayerStatus1"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|right"
                android:layout_weight="0"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>
...
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <Button
            android:id="@+id/privateLobbyReadyUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Ready Up" />

    </LinearLayout>
</FrameLayout>
